--- a/index.css
+++ b/index.css
@@ -17,4 +17,7 @@
     a{
         @apply text-blue-600 hover:text-blue-800 underline underline-offset-2 ; 
     }
+    b{
+        @apply text-rose-500
+    }
 }
